      Use convertGeometry() instead.
    - Added a SOP_NodeVDB::matchGroup() overload that eliminates the need
      to const_cast the GU_Detail.
      [Contributed by Jeff Lait]
    - Grid transforms are now more aggressively simplified, making it
      less likely to produce nonuniform voxels erroneously.
      [Contributed by Jeff Lait]
    - Added a houdini_utils::OpFactory::setVerb() method to register
      compilable SOPs.
    - Made SOP_NodeVDB::cookMySop() final (that is, non-overridable)
      to facilitate the implementation of compilable SOPs.
      Override SOP_NodeVDB::cookVDBSop() instead.  (In most cases,
      it suffices to rename cookMySop to cookVDBSop.)
    - Renamed some parameters on the following SOPs to match the equivalent
      native Houdini nodes: Advect, Advect Points, Analysis, Combine, Filter,
      Fracture, From Particles, From Polygons, Morph Level Set,
      Occlusion Mask, Offset Level Set, Points Group, Resample,
      Resize Narrow Band, Smooth Level Set, Topology To Level Set,
      Vector Merge, and Visualize.
    - Added SOP_VDBCacheOptions, a convenience base class for compilable SOPs.
      [Contributed by Jeff Lait]
    - Converted most SOPs into compilable SOPs.


Version 5.0.0 - November 6, 2017

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 16.  To preserve ABI compatibility,
      when compiling OpenVDB or any dependent code define the macro
      OPENVDB_ABI_VERSION_NUMBER=N, where, for example, N is 3 for
      Houdini 15, 15.5 and 16 and 4 for the upcoming release.

    New features:
    - Added a getLibraryAbiVersionString() function, which returns a
      string such as "5.0.0abi3".
    - Added a WeakPtr type alias for ABI compatibility.
    - Metadata fields of unregistered types are no longer discarded after